# rust-sip-db

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: db.rs  error.rs  mod.rs  transaction.rs  types.rs
src/core/sql/: executor.rs  formatter.rs  lexer.rs  mod.rs  parser.rs
src/core/storage/: file.rs  memory.rs  mod.rs
