[package]
name = "simple_db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"  # 错误处理
serde = { version = "1.0", features = ["derive"] }  # 序列化/反序列化
serde_json = "1.0"  # JSON 支持
bincode = "1.3"  # 二进制序列化
thiserror = "1.0"  # 错误类型定义
clap = { version = "4.4", features = ["derive"] }  # 命令行参数解析

[[bin]]
name = "simple_db"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"
